# financas

./: pyproject.toml
tests/: test_financas.py
